--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <title>Robust Catkin Border</title>
     <meta name="description" content="okay" />
     <link rel="stylesheet" href="/lmao.css" />
+    <script src="/wow.js"></script>
   </head>
   <body>
-    <h1 class="among">
+    <h1 class="among" id="whar">
       hi
     </h1>
+    <br />
+    <button onclick="textie();">
+      wowe
+    </button>
   </body>
 </html>
